--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -78,25 +78,25 @@ website:
     - title: "About"
       contents:
         - file: about/overview.qmd
-          text: "About"
+        - text: "Use cases"
+          file: about/use-cases/ai-governance.qmd
           contents:
-          - text: "Use cases"
-            file: about/use-cases/ai-governance.qmd
+          - about/use-cases/ai-governance.qmd
+          - about/use-cases/model-risk-management.qmd
+          - about/use-cases/eu-ai-act.qmd
+          - about/use-cases/sr-11-7.qmd
+          - about/use-cases/ss1-23.qmd
+          - about/use-cases/e-23.qmd
+        - text: "Product features"
+          file: about/product-features.qmd
+          contents:
+          - about/overview-model-documentation.qmd
+          - about/overview-llm-features.qmd
+          - text: "Deployment options"
+            file: about/deployment/deployment-options.qmd
             contents:
-            - about/use-cases/ai-governance.qmd
-            - about/use-cases/model-risk-management.qmd
-            - about/use-cases/eu-ai-act.qmd
-            - about/use-cases/sr-11-7.qmd
-            - about/use-cases/ss1-23.qmd
-            - about/use-cases/e-23.qmd
-        - about/overview-model-documentation.qmd
-        - text: "LLM features"
-          file: about/overview-llm-features.qmd
-        - file: about/deployment/deployment-options.qmd
-          text: "Deployment options"
-          contents:
-          - about/deployment/multi-tenant-cloud.qmd
-          - about/deployment/virtual-private-validmind.qmd
+            - about/deployment/multi-tenant-cloud.qmd
+            - about/deployment/virtual-private-validmind.qmd
         - about/deployment/system-access-requirements.qmd
         - about/glossary/glossary.qmd
         - text: "---"
