--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -78,7 +78,9 @@ website:
     - title: "About"
       contents:
         - file: about/overview.qmd
+        - text: "---"
         - text: "Use cases"
+        - text: "AI governance"
           file: about/use-cases/ai-governance.qmd
           contents:
           - about/use-cases/ai-governance.qmd
@@ -97,7 +99,7 @@ website:
             contents:
             - about/deployment/multi-tenant-cloud.qmd
             - about/deployment/virtual-private-validmind.qmd
-        - about/deployment/system-access-requirements.qmd
+          - about/deployment/system-access-requirements.qmd
         - about/glossary/glossary.qmd
         - text: "---"
         - text: "Contributing"
