--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -80,12 +80,16 @@ website:
         - file: about/overview.qmd
         - text: "---"
         - text: "Use cases"
-        - about/use-cases/ai-governance.qmd
-        - about/use-cases/model-risk-management.qmd
-        - about/use-cases/eu-ai-act.qmd
-        - about/use-cases/sr-11-7.qmd
-        - about/use-cases/ss1-23.qmd
-        - about/use-cases/e-23.qmd
+        - text: "AI governance"
+          file: about/use-cases/ai-governance.qmd
+          contents:
+          - about/use-cases/eu-ai-act.qmd
+        - text: "Model risk management"
+          file: about/use-cases/model-risk-management.qmd
+          contents:
+          - about/use-cases/sr-11-7.qmd
+          - about/use-cases/ss1-23.qmd
+          - about/use-cases/e-23.qmd
         - text: "---"
         - text: "Product features"
         - text: "Library and platform"
