Preview for 26.01 release notes

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -47,6 +47,7 @@ jobs:
       with:
         repository: validmind/release-notes
         path: site/_source/release-notes
+        ref: nrichers/sc-13641/release-notes-for-26-01
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Set up Quarto
