Rename topic to match short title

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -93,7 +93,7 @@ website:
         - text: "---"
         - text: "Product features"
         - text: "Library and platform"
-          file: about/product-features.qmd
+          file: about/library-and-platform.qmd
           contents:
           - about/overview-model-documentation.qmd
           - about/overview-llm-features.qmd
