--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -79,6 +79,11 @@ jobs:
         cp -r site/_source/release-notes/releases site
         rm -f site/releases/backend-releases.qmd site/releases/cmvm-releases.qmd
 
+    - name: Verify copyright headers
+      run: |
+        cd site
+        make verify-copyright
+
     - name: Render demo docs site
       run: |
           cd site
