--- a/site/Makefile
+++ b/site/Makefile
@@ -13,12 +13,13 @@ SRC_ROOT := _source
 SRC_DIR := $(SRC_ROOT)/validmind-library
 
 # Define .PHONY target for help section
-.PHONY: help clean clone copy-installation copy-release-notes copyright delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-api-json get-source kind-serve kind-stop kind-restart kind-logs notebooks python-docs release-notes test-descriptions verify-copyright yearly-releases
+.PHONY: help add-copyright clean clone copy-installation copy-release-notes delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-api-json get-source kind-serve kind-stop kind-restart kind-logs notebooks python-docs release-notes test-descriptions verify-copyright yearly-releases
 
 # Help section
 help:
 	@echo "Available targets:"
 	@echo "  help                     Display this help message (default target)"
+	@echo "  add-copyright            Add copyright headers to .qmd and .yml/.yaml files"
 	@echo "  clean                    Remove the _source/ directory"
 	@echo "  clone                    Clone other required repositories into _source/"
 	@echo "                           Optional, for PR testing:" 
@@ -49,9 +50,12 @@ help:
 	@echo "  release-notes TAG=<tag>  Clone and copy release notes for the specified tag or repo/tag"
 	@echo "                           Examples: TAG=cmvm/25.07 or TAG=validmind-library/v2.8.22"
 	@echo "  test-descriptions        Copy the ValidMind tests docs into tests/"
-	@echo "  copyright                Add copyright headers to .qmd and .yml/.yaml files"
 	@echo "  verify-copyright         Verify that all .qmd and .yml/.yaml files have copyright headers"
 	@echo "  yearly-releases          Collate releases by year into a listing landing and update releases sidebar"
+
+add-copyright:
+	@echo "\nAdding copyright headers to .qmd and .yml/.yaml files ..."
+	@cd .. && python site/scripts/add_copyright.py
 
 # Clean up source directory
 clean:
@@ -415,10 +419,6 @@ test-descriptions:
 	@cp -r $(SRC_DIR)/build/_test_descriptions/validmind/tests/. $(DEST_DIR_TESTS)
 	@echo "Copying _metadata.yml into tests/ ..."
 	@cp developer/_metadata.yml $(DEST_DIR_TESTS)/_metadata.yml
-
-copyright:
-	@echo "\nAdding copyright headers to .qmd and .yml/.yaml files ..."
-	@cd .. && python site/scripts/copyright_qmd_files.py
 
 verify-copyright:
 	@echo "\nVerifying copyright headers in .qmd and .yml/.yaml files ..."
