--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -29,6 +29,7 @@ validmind:
   customer: "Customer-Managed ValidMind"
   admin: "ValidMind Admin UI"
   checker: "Virtual Document Validator"
+  support: "support@validmind.ai"
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
