URL variable too

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -41,6 +41,7 @@ vm:
   customer: "CMVM"
   admin: "admin UI"
   checker: "Document Checker"
+  support: "support@validmind.ai"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
