--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -29,7 +29,7 @@ validmind:
   customer: "Customer-Managed ValidMind"
   admin: "ValidMind Admin UI"
   checker: "Virtual Document Validator"
-  support: "support.validmind.ai"
+  support: "support.validmind.com"
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
@@ -41,7 +41,7 @@ vm:
   customer: "CMVM"
   admin: "admin UI"
   checker: "Document Checker"
-  support: "support@validmind.ai"
+  support: "support@validmind.com"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
