Adjusting the variables

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -29,7 +29,6 @@ validmind:
   customer: "Customer-Managed ValidMind"
   admin: "ValidMind Admin UI"
   checker: "Virtual Document Validator"
-  support: "support.validmind.com"
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
@@ -41,7 +40,6 @@ vm:
   customer: "CMVM"
   admin: "admin UI"
   checker: "Document Checker"
-  support: "support@validmind.com"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
@@ -61,6 +59,12 @@ url:
   us1: "https://app.prod.validmind.ai"          # Docker: VALIDMIND_URL
   ca1: "https://app.ca1.validmind.ai"
   jupyterhub: "https://jupyterhub.validmind.ai" # Docker: JUPYTERHUB_URL
+
+# SUPPORT URLS
+
+support:
+  center: "support.validmind.com"
+  email: "support@validmind.com"
 
 # Amazon Web Services Privatelink specific URLs
 # Rendered format: `{{< var aws.privatelink >}}`
