docs: Standardise support email & URL (#1112)
* Support email variable

* Changing instances to variable

* URL variable too

* Oops

* variable doesn't work in listing card paths

* Edit

* one more

* Adjusting the variables

* Mailto exception

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -60,6 +60,12 @@ url:
   ca1: "https://app.ca1.validmind.ai"
   jupyterhub: "https://jupyterhub.validmind.ai" # Docker: JUPYTERHUB_URL
 
+# SUPPORT URLS
+
+support:
+  center: "support.validmind.com"
+  email: "support@validmind.com"
+
 # Amazon Web Services Privatelink specific URLs
 # Rendered format: `{{< var aws.privatelink >}}`
 
