--- a/site/training/_metadata.yml
+++ b/site/training/_metadata.yml
@@ -5,4 +5,9 @@
 format:
   html:
     page-layout: full
-    css: assets/training.css 
+    css: assets/training.css
+  revealjs:
+    include-in-header:
+      - text: |
+          <link rel="stylesheet" href="/training/assets/vmurl-settings.css">
+          <script src="/training/assets/vmurl-settings.js"></script>
