Uncloak and update integrations docs with AWS Bedrock example

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -6,7 +6,7 @@ project:
   type: website
 
 metadata-files:
-  - _drafts.yaml
+  # - _drafts.yaml
   - get-started/_sidebar.yaml
   - guide/_sidebar.yaml
   - developer/_sidebar.yaml
