--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -35,9 +35,8 @@ website:
           - guide/configuration/manage-your-profile.qmd
           - guide/configuration/customize-your-dashboard.qmd
         - guide/configuration/manage-platform-notifications.qmd
-        # Uncomment when removed from _drafts.yaml
-        # - text: "---"
-        # - text: "Integrations"
+        - text: "---"
+        - text: "Integrations"
         - file: guide/integrations/managing-integrations.qmd
           contents:
           - guide/integrations/manage-secrets.qmd
