--- a/site/_drafts.yaml
+++ b/site/_drafts.yaml
@@ -10,10 +10,6 @@
 # site, even if they are referenced in _quarto.yml or 
 # _sidebar.yaml files. 
 
-website:
-  drafts:
-    - guide/integrations/managing-integrations.qmd
-    - guide/integrations/manage-secrets.qmd
-    - guide/integrations/configure-connections.qmd
-    - guide/integrations/linking-external-models.qmd
-    - guide/integrations/integrations-examples.qmd
+# website:
+#   drafts:
+    # - ADD DRAFT FILES HERE
