Experiment with local API JSON spec

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -84,6 +84,11 @@ jobs:
         cp -r site/_source/release-notes/releases site
         rm -f site/releases/backend-releases.qmd site/releases/cmvm-releases.qmd
 
+    - name: Fetch API specs and RapiDoc library
+      run: |
+        cd site
+        make get-api-json
+
     - name: Render demo docs site
       run: |
           cd site
