--- a/site/.gitignore
+++ b/site/.gitignore
@@ -7,3 +7,8 @@
 # Environment
 site/.env
 **/*.quarto_ipynb
+
+# Fetched API specs
+reference/vm-api-swagger.json
+reference/admin-api-swagger.json
+reference/rapidoc-min.js
