--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -13,6 +13,7 @@ website:
         - file: guide/access/accessing-validmind.qmd
           contents:
             - guide/access/register-with-validmind.qmd
+            - guide/access/sign-up-via-aws-marketplace.qmd
             - guide/access/log-in-to-validmind.qmd
         - text: "---"
         - text: "Configuration"
