--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -47,6 +47,7 @@ jobs:
       with:
         repository: validmind/release-notes
         path: site/_source/release-notes
+        ref: nrichers/sc-13770/release-notes-for-26-02
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Verify copyright headers
