--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -1,3 +1,7 @@
+# Copyright © 2023-2026 ValidMind Inc. All rights reserved.
+# Refer to the LICENSE file in the root of this repository for details.
+# SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
+
 # VARIABLE NAMING CONVENTIONS:
 # - Variables for long & short forms should be related (e.g. `validmind`, `vm`)
 # - Variable names should be descriptive and consistent (e.g. `user.firstname`, `user.lastname`)
@@ -55,6 +59,12 @@ url:
   us1: "https://app.prod.validmind.ai"          # Docker: VALIDMIND_URL
   ca1: "https://app.ca1.validmind.ai"
   jupyterhub: "https://jupyterhub.validmind.ai" # Docker: JUPYTERHUB_URL
+
+# SUPPORT URLS
+
+support:
+  center: "support.validmind.com"
+  email: "support@validmind.com"
 
 # Amazon Web Services Privatelink specific URLs
 # Rendered format: `{{< var aws.privatelink >}}`
