--- a/site/_quarto-staging.yml
+++ b/site/_quarto-staging.yml
@@ -13,3 +13,4 @@ format:
     include-in-header: 
       - environments/datadog-staging.html
       - zendesk-chat.html
+      - environments/noindex.html
