--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -42,6 +42,7 @@ website:
           contents:
           - guide/integrations/manage-secrets.qmd
           - guide/integrations/configure-connections.qmd
+          - guide/integrations/custom-integrations.qmd
           - guide/integrations/linking-external-models.qmd
           - guide/integrations/integrations-examples.qmd
         - text: "---"
