--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -53,7 +53,27 @@ website:
         - text: "Notebooks"
         - text: "Code samples"
           file: developer/samples-jupyter-notebooks.qmd
-          contents: "notebooks/code_samples/**"
+          contents:
+            - section: "Agents"
+              contents: "notebooks/code_samples/agents/**"
+            - section: "Capital Markets"
+              contents: "notebooks/code_samples/capital_markets/**"
+            - section: "Code Explainer"
+              contents: "notebooks/code_samples/code_explainer/**"
+            - section: "Credit Risk"
+              contents: "notebooks/code_samples/credit_risk/**"
+            - section: "Custom Tests"
+              contents: "notebooks/code_samples/custom_tests/**"
+            - section: "Model Validation"
+              contents: "notebooks/code_samples/model_validation/**"
+            - section: "NLP and LLM"
+              contents: "notebooks/code_samples/nlp_and_llm/**"
+            - section: "Ongoing Monitoring"
+              contents: "notebooks/code_samples/ongoing_monitoring/**"
+            - section: "Regression"
+              contents: "notebooks/code_samples/regression/**"
+            - section: "Time Series"
+              contents: "notebooks/code_samples/time_series/**"
         - text: "---"
         - text: "Reference"
         - text: "{{< var validmind.api >}}"
