Update .gitignore to ignore local rules & skills

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ site/validmind-docs.yaml
 
 # Python API docs are now generated on the fly
 site/validmind
+
+# Cursor rules
+.cursor/rules/
+.cursor/skills/
