Updating developer/_sidebar.yaml with updated script

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -56,23 +56,23 @@ website:
           contents:
             - section: "Agents"
               contents: "notebooks/code_samples/agents/**"
-            - section: "Capital Markets"
+            - section: "Capital markets"
               contents: "notebooks/code_samples/capital_markets/**"
-            - section: "Code Explainer"
+            - section: "Code explainer"
               contents: "notebooks/code_samples/code_explainer/**"
-            - section: "Credit Risk"
+            - section: "Credit risk"
               contents: "notebooks/code_samples/credit_risk/**"
-            - section: "Custom Tests"
+            - section: "Custom tests"
               contents: "notebooks/code_samples/custom_tests/**"
-            - section: "Model Validation"
+            - section: "Model validation"
               contents: "notebooks/code_samples/model_validation/**"
             - section: "NLP and LLM"
               contents: "notebooks/code_samples/nlp_and_llm/**"
-            - section: "Ongoing Monitoring"
+            - section: "Ongoing monitoring"
               contents: "notebooks/code_samples/ongoing_monitoring/**"
             - section: "Regression"
               contents: "notebooks/code_samples/regression/**"
-            - section: "Time Series"
+            - section: "Time series"
               contents: "notebooks/code_samples/time_series/**"
         - text: "---"
         - text: "Reference"
