--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -41,7 +41,7 @@ website:
         - text: "4 — Finalize validation & reporting"
           file: notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
         - text: "---"
-        - text: "Model Testing"
+        - text: "How-To"
         - text: "Run tests & test suites"
           file: developer/model-testing/testing-overview.qmd
           contents: "notebooks/how_to/**"
@@ -55,25 +55,23 @@ website:
           file: developer/samples-jupyter-notebooks.qmd
           contents:
             - section: "Agents"
-              contents: "notebooks/code_samples/agents/**"
+              contents: "notebooks/use_cases/agents/**"
             - section: "Capital markets"
-              contents: "notebooks/code_samples/capital_markets/**"
+              contents: "notebooks/use_cases/capital_markets/**"
             - section: "Code explainer"
-              contents: "notebooks/code_samples/code_explainer/**"
+              contents: "notebooks/use_cases/code_explainer/**"
             - section: "Credit risk"
-              contents: "notebooks/code_samples/credit_risk/**"
-            - section: "Custom tests"
-              contents: "notebooks/code_samples/custom_tests/**"
+              contents: "notebooks/use_cases/credit_risk/**"
             - section: "Model validation"
-              contents: "notebooks/code_samples/model_validation/**"
+              contents: "notebooks/use_cases/model_validation/**"
             - section: "NLP and LLM"
-              contents: "notebooks/code_samples/nlp_and_llm/**"
+              contents: "notebooks/use_cases/nlp_and_llm/**"
             - section: "Ongoing monitoring"
-              contents: "notebooks/code_samples/ongoing_monitoring/**"
+              contents: "notebooks/use_cases/ongoing_monitoring/**"
             - section: "Regression"
-              contents: "notebooks/code_samples/regression/**"
+              contents: "notebooks/use_cases/regression/**"
             - section: "Time series"
-              contents: "notebooks/code_samples/time_series/**"
+              contents: "notebooks/use_cases/time_series/**"
         - text: "---"
         - text: "Reference"
         - text: "{{< var validmind.api >}}"
