--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -19,35 +19,35 @@ website:
           file: developer/model-documentation/install-and-initialize-validmind-library.qmd
         - developer/model-documentation/store-credentials-in-env-file.qmd
         - text: "---"
-        - text: "Model Development"
+        - text: "Tutorials"
         # USING THE VARIABLE IN THE LINK TEXT MESSES UP THE MOBILE VIEW & BREADCRUMB
-        - text: "1 — Set up ValidMind Library"
-          file: notebooks/tutorials/model_development/1-set_up_validmind.ipynb
-        - text: "2 — Start model development process"
-          file: notebooks/tutorials/model_development/2-start_development_process.ipynb
-        - text: "3 — Integrate custom tests"
-          file: notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
-        - text: "4 — Finalize testing & documentation"
-          file: notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb
-        - text: "---"
-        - text: "Model Validation"
-        # USING THE VARIABLE IN THE LINK TEXT MESSES UP THE MOBILE VIEW & BREADCRUMB
-        - text: "1 — Set up ValidMind Library for validation"
-          file: notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
-        - text: "2 — Start model validation process"
-          file: notebooks/tutorials/model_validation/2-start_validation_process.ipynb
-        - text: "3 — Developing a challenger model"
-          file: notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
-        - text: "4 — Finalize validation & reporting"
-          file: notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
+        - section: "Model development"
+          contents:
+            - text: "1 — Set up ValidMind Library"
+              file: notebooks/tutorials/model_development/1-set_up_validmind.ipynb
+            - text: "2 — Start model development process"
+              file: notebooks/tutorials/model_development/2-start_development_process.ipynb
+            - text: "3 — Integrate custom tests"
+              file: notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
+            - text: "4 — Finalize testing & documentation"
+              file: notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb
+        - section: "Model validation"
+          contents:
+            - text: "1 — Set up ValidMind Library for validation"
+              file: notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
+            - text: "2 —\u00A0Start model validation process"
+              file: notebooks/tutorials/model_validation/2-start_validation_process.ipynb
+            - text: "3 — Developing a challenger model"
+              file: notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+            - text: "4 — Finalize validation & reporting"
+              file: notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
         - text: "---"
         - text: "How-To"
         - text: "Run tests & test suites"
           file: developer/model-testing/testing-overview.qmd
           contents: "notebooks/how_to/**"
-        - text: "Test descriptions"
-          file: developer/model-testing/test-descriptions.qmd
-          contents: tests/**
+        - text: "Use library features"
+          file: developer/model-testing/feature-overview.qmd
         - developer/model-testing/test-sandbox.qmd
         - text: "---"
         - text: "Notebooks"
@@ -74,8 +74,11 @@ website:
               contents: "notebooks/use_cases/time_series/**"
         - text: "---"
         - text: "Reference"
+        - text: "Test descriptions"
+          file: developer/model-testing/test-descriptions.qmd
+          contents: tests/**
         - text: "{{< var validmind.api >}}"
           file: validmind/validmind.qmd
-        - reference/validmind-rest-api-vm.qmd
-
-
+        # USING THE VARIABLE IN THE LINK TEXT MESSES UP THE MOBILE VIEW & BREADCRUMB
+        - text: "ValidMind Public REST API"
+          file: reference/validmind-rest-api-vm.qmd
