Setup for how-to run tests

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -45,7 +45,14 @@ website:
         - text: "How-To"
         - text: "Run tests & test suites"
           file: developer/model-testing/testing-overview.qmd
-          contents: "notebooks/how_to/**"
+          contents:
+            - section: "Explore tests"
+              contents: "notebooks/how_to/tests/explore_tests/*.ipynb"
+            - section: "Run tests"
+              contents: "notebooks/how_to/tests/run_tests/*.ipynb"
+            - section: "Custom tests"
+              contents: "notebooks/how_to/tests/custom_tests/*.ipynb"
+            - developer/model-testing/test-sandbox.qmd
         - text: "Use library features"
           file: developer/model-testing/feature-overview.qmd
         - developer/model-testing/test-sandbox.qmd
