--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -47,38 +47,47 @@ website:
           file: developer/model-testing/testing-overview.qmd
           contents:
             - section: "Explore tests"
-              contents: "notebooks/how_to/tests/explore_tests/*.ipynb"
+              contents:
+                - notebooks/how_to/tests/explore_tests/explore_tests.ipynb
+                - notebooks/how_to/tests/explore_tests/explore_test_suites.ipynb
             - section: "Run tests"
-              contents: "notebooks/how_to/tests/run_tests/*.ipynb"
+              contents:
+                - notebooks/how_to/tests/run_tests/1_run_dataset_based_tests.ipynb
+                - notebooks/how_to/tests/run_tests/2_run_comparison_tests.ipynb
+                - section: "Configure tests"
+                  contents: "notebooks/how_to/tests/run_tests/configure_tests/*.ipynb"
+                - section: "Documentation tests"
+                  contents: "notebooks/how_to/tests/run_tests/documentation_tests/*.ipynb"
             - section: "Custom tests"
-              contents: "notebooks/how_to/tests/custom_tests/*.ipynb"
+              contents:
+                - notebooks/how_to/tests/custom_tests/implement_custom_tests.ipynb
+                - notebooks/how_to/tests/custom_tests/integrate_external_test_providers.ipynb
             - developer/model-testing/test-sandbox.qmd
         - text: "Use library features"
           file: developer/model-testing/feature-overview.qmd
-        - developer/model-testing/test-sandbox.qmd
         - text: "---"
         - text: "Notebooks"
         - text: "Code samples"
           file: developer/samples-jupyter-notebooks.qmd
           contents:
             - section: "Agents"
-              contents: "notebooks/use_cases/agents/**"
+              contents: "notebooks/use_cases/agents/**/*.ipynb"
             - section: "Capital markets"
-              contents: "notebooks/use_cases/capital_markets/**"
+              contents: "notebooks/use_cases/capital_markets/**/*.ipynb"
             - section: "Code explainer"
-              contents: "notebooks/use_cases/code_explainer/**"
+              contents: "notebooks/use_cases/code_explainer/**/*.ipynb"
             - section: "Credit risk"
-              contents: "notebooks/use_cases/credit_risk/**"
+              contents: "notebooks/use_cases/credit_risk/**/*.ipynb"
             - section: "Model validation"
-              contents: "notebooks/use_cases/model_validation/**"
+              contents: "notebooks/use_cases/model_validation/**/*.ipynb"
             - section: "NLP and LLM"
-              contents: "notebooks/use_cases/nlp_and_llm/**"
+              contents: "notebooks/use_cases/nlp_and_llm/**/*.ipynb"
             - section: "Ongoing monitoring"
-              contents: "notebooks/use_cases/ongoing_monitoring/**"
+              contents: "notebooks/use_cases/ongoing_monitoring/**/*.ipynb"
             - section: "Regression"
-              contents: "notebooks/use_cases/regression/**"
+              contents: "notebooks/use_cases/regression/**/*.ipynb"
             - section: "Time series"
-              contents: "notebooks/use_cases/time_series/**"
+              contents: "notebooks/use_cases/time_series/**/*.ipynb"
         - text: "---"
         - text: "Reference"
         - text: "Test descriptions"
