--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -55,7 +55,7 @@ website:
               contents:
                 - notebooks/how_to/tests/run_tests/1_run_dataset_based_tests.ipynb
                 - notebooks/how_to/tests/run_tests/2_run_comparison_tests.ipynb
-                - section: "Configure tests"
+                - section: "Configuring tests"
                   contents: "notebooks/how_to/tests/run_tests/configure_tests/*.ipynb"
                 - section: "Documentation tests"
                   contents: "notebooks/how_to/tests/run_tests/documentation_tests/*.ipynb"
