--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -19,7 +19,7 @@ website:
           file: developer/model-documentation/install-and-initialize-validmind-library.qmd
         - developer/model-documentation/store-credentials-in-env-file.qmd
         - text: "---"
-        - text: "Tutorials"
+        - text: "End-to-End Tutorials"
         # USING THE VARIABLE IN THE LINK TEXT MESSES UP THE MOBILE VIEW & BREADCRUMB
         - section: "Model development"
           contents:
