Populate how-to notebooks -testing script

--- a/site/Makefile
+++ b/site/Makefile
@@ -328,6 +328,8 @@ notebooks:
 	@cp developer/_metadata.yml $(DEST_DIR_NB)/_metadata.yml
 	@echo "Updating developer/_sidebar.yaml with use_cases directories ..."
 	@python scripts/developer-sidebar/update_use_cases.py
+	@echo "Updating developer/_sidebar.yaml with how-to directories ..."
+	@python scripts/developer-sidebar/update_how_tos.py
 	@echo "Zip up notebooks.zip ..."
 	@zip -r notebooks.zip $(DEST_DIR_NB) > /dev/null 2>&1
 
