--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -65,6 +65,15 @@ website:
                 - notebooks/how_to/tests/custom_tests/integrate_external_test_providers.ipynb
         - text: "Use library features"
           file: developer/how-to/feature-overview.qmd
+          contents:
+            - section: "Data and datasets"
+              contents: "notebooks/how_to/data_and_datasets/**/*.ipynb"
+            - section: "Metrics"
+              contents: "notebooks/how_to/metrics/**/*.ipynb"
+            - section: "Scoring"
+              contents: "notebooks/how_to/scoring/**/*.ipynb"
+            - section: "Security"
+              contents: "notebooks/how_to/security/**/*.ipynb"
         - text: "---"
         - text: "Notebooks"
         - text: "Code samples"
