--- a/site/notebooks/use_cases/capital_markets/capital_markets_template.yaml
+++ b/site/notebooks/use_cases/capital_markets/capital_markets_template.yaml
@@ -1,3 +1,7 @@
+# Copyright © 2023-2026 ValidMind Inc. All rights reserved.
+# Refer to the LICENSE file in the root of this repository for details.
+# SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
+
 - id: model_metadata
   title: Model Metadata and Stakeholders
   index_only: true
