--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -67,7 +67,10 @@ website:
           file: developer/how-to/feature-overview.qmd
           contents:
             - section: "Data and datasets"
-              contents: "notebooks/how_to/data_and_datasets/**/*.ipynb"
+              contents:
+                - "notebooks/how_to/data_and_datasets/*.ipynb"
+                - section: "Dataset inputs"
+                  contents: "notebooks/how_to/data_and_datasets/dataset_inputs/**/*.ipynb"
             - section: "Metrics"
               contents: "notebooks/how_to/metrics/**/*.ipynb"
             - section: "Scoring"
