--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -68,7 +68,7 @@ website:
           contents:
             - section: "Data and datasets"
               contents:
-                - "notebooks/how_to/data_and_datasets/*.ipynb"
+                - notebooks/how_to/data_and_datasets/use_dataset_model_objects.ipynb
                 - section: "Dataset inputs"
                   contents: "notebooks/how_to/data_and_datasets/dataset_inputs/**/*.ipynb"
             - section: "Metrics"
