--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -57,7 +57,7 @@ website:
                 - notebooks/how_to/tests/run_tests/2_run_comparison_tests.ipynb
                 - section: "Configuring tests"
                   contents: "notebooks/how_to/tests/run_tests/configure_tests/*.ipynb"
-                - section: "Documentation tests"
+                - section: "Using tests in documentation"
                   contents: "notebooks/how_to/tests/run_tests/documentation_tests/*.ipynb"
             - section: "Custom tests"
               contents:
