Add initial draft

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -42,6 +42,7 @@ website:
           contents:
           - guide/integrations/manage-secrets.qmd
           - guide/integrations/configure-connections.qmd
+          - guide/integrations/configure-analytics-exports.qmd
           - guide/integrations/implement-custom-integrations.qmd
           - guide/integrations/link-external-models.qmd
           - guide/integrations/integrations-examples.qmd
