--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -10,9 +10,9 @@ website:
         - releases/validmind-library-releases.qmd
         - releases/validmind-platform-releases.qmd
         - releases/documentation-updates.qmd
-        - text: "---"
-        - text: "Breaking changes & deprecations"
-          file: releases/breaking-changes/breaking-changes.qmd
+        # - text: "---"
+        # - text: "Breaking changes & deprecations"
+        #   file: releases/breaking-changes/breaking-changes.qmd
         - text: "---"
         - text: "Older releases"
         # MAKE-RELEASE-NOTES-EMBED-MARKER
